// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`users.add > functionality > user is added - no public name, no email 1`] = `
{
  "added": {
    "users": {
      "id:5e6ed61e-3755-4da6-932d-bce143e948e5": {
        "acceptReceipts": false,
        "connectedAccountId": null,
        "createdAt": "2020-01-01 00:00:00+00",
        "exposeReceipts": false,
        "id": "5e6ed61e-3755-4da6-932d-bce143e948e5",
        "name": "Arnoldo Bashirian",
        "ownerAccountId": "db9f684f-0a68-43a4-9c16-7fec00f2a42d",
        "publicName": null,
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`users.add > functionality > user is added - public name, no email 1`] = `
{
  "added": {
    "users": {
      "id:3c43e02d-9354-4cbc-823e-51a3b10acd0c": {
        "acceptReceipts": false,
        "connectedAccountId": null,
        "createdAt": "2020-01-01 00:00:00+00",
        "exposeReceipts": false,
        "id": "3c43e02d-9354-4cbc-823e-51a3b10acd0c",
        "name": "Reynold Hartmann",
        "ownerAccountId": "def8183a-8adf-4eea-b2b4-c139b528226b",
        "publicName": "Lacey Grimes",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`users.add > functionality > user is added - with email > doesn't have a vice versa intention 1`] = `
{
  "added": {
    "accountConnectionsIntentions": {
      "accountId:4c1b6fc3-9c77-4c44-8645-3e92b1097dd7|targetAccountId:b676dec2-bbf7-4d78-8799-281f6327c0d2": {
        "accountId": "4c1b6fc3-9c77-4c44-8645-3e92b1097dd7",
        "createdAt": "2020-01-01 00:00:00+00",
        "targetAccountId": "b676dec2-bbf7-4d78-8799-281f6327c0d2",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "0b8cc418-b968-4ecb-986b-e04199fcc0ac",
      },
    },
    "users": {
      "id:0b8cc418-b968-4ecb-986b-e04199fcc0ac": {
        "acceptReceipts": false,
        "connectedAccountId": null,
        "createdAt": "2020-01-01 00:00:00+00",
        "exposeReceipts": false,
        "id": "0b8cc418-b968-4ecb-986b-e04199fcc0ac",
        "name": "Brendon Wisozk",
        "ownerAccountId": "4c1b6fc3-9c77-4c44-8645-3e92b1097dd7",
        "publicName": null,
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`users.add > functionality > user is added - with email > has a vice versa intention 1`] = `
{
  "added": {
    "users": {
      "id:a17a079f-815e-469e-a0da-a3e32f7a3ceb": {
        "acceptReceipts": false,
        "connectedAccountId": "b11c5d75-cf7f-4dea-8daa-7a20978f3160",
        "createdAt": "2020-01-01 00:00:00+00",
        "exposeReceipts": false,
        "id": "a17a079f-815e-469e-a0da-a3e32f7a3ceb",
        "name": "Jacklyn Schroeder-Collins",
        "ownerAccountId": "09ac0425-3313-43b4-b634-0e9b82be31c5",
        "publicName": null,
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
  "deleted": {
    "accountConnectionsIntentions": {
      "accountId:b11c5d75-cf7f-4dea-8daa-7a20978f3160|targetAccountId:09ac0425-3313-43b4-b634-0e9b82be31c5": undefined,
    },
  },
  "updated": {
    "users": {
      "id:d0549777-2079-42d9-b1ee-1c9b1e26c243": {
        "connectedAccountId": "09ac0425-3313-43b4-b634-0e9b82be31c5",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`users.add > input verification > mixed success and fail 1`] = `
{
  "added": {
    "users": {
      "id:bb9c6125-1c9a-40c3-bb1f-7e6c4e870372": {
        "acceptReceipts": false,
        "connectedAccountId": null,
        "createdAt": "2020-01-01 00:00:00+00",
        "exposeReceipts": false,
        "id": "bb9c6125-1c9a-40c3-bb1f-7e6c4e870372",
        "name": "Miss Alia Schiller",
        "ownerAccountId": "1d263b1a-801e-44e4-a018-32c2cbc9f60e",
        "publicName": null,
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;
